--- a/styles/index.scss
+++ b/styles/index.scss
@@ -16,6 +16,9 @@ body {
     }
   }
 }
+.grey {
+  color: #63696e;
+}
 .active {
   color: aquamarine !important;
   svg {
@@ -30,7 +33,7 @@ body {
     left: 0;
     bottom: 0;
     width: 300px;
-    z-index: 99999;
+    z-index: 99;
   }
 
   .background {
@@ -125,9 +128,8 @@ body {
 .page-wrapper {
   padding-top: 20px;
 }
-.headerItemWrapper {
-  position: absolute;
-  top: 50%;
+.headerText {
+  padding-top: 40px;
 }
 
 .card.fj-card {
@@ -430,7 +432,7 @@ body {
 .post {
   background-color: #fff;
   box-shadow: 2px 5px 25px rgba(0, 0, 0, 0.15);
-  min-height: 180px;
+  min-height: 100px;
   width: 100%;
   position: relative;
   z-index: 2;
@@ -457,6 +459,26 @@ body {
       left: 50%;
       transform: translate(-50%, -50%);
     }
+  }
+  .project-image {
+    background-color: #24b47e;
+    width: 100%;
+    height: 400px;
+    border-radius: 3px;
+    position: relative;
+    h4 {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+  .project-title {
+  }
+  .project-details {
+  }
+  ul {
+    list-style: none;
   }
 }
 .catItem {
@@ -639,6 +661,11 @@ body {
   }
 }
 
+.challange {
+  h4 {
+    color: #24b47e;
+  }
+}
 @media (max-width: 786px) {
   .timeline__event {
     flex-direction: column;
