--- a/styles/index.scss
+++ b/styles/index.scss
@@ -668,11 +668,11 @@ body {
 }
 .cvContainer {
   display: flex;
-  width: 900px;
-  height: 100%;
-  background: white;
+  width: 1170px;
+  max-height: 100%;
   margin: 0 auto;
-  border: 1px solid #c7c7c7;
+  background: white;
+  /* border: 1px solid #c7c7c7; */
 
   .item-header {
     font-weight: 600;
@@ -803,6 +803,11 @@ body {
         }
       }
       &:nth-child(13) {
+        .bar {
+          width: 75%;
+        }
+      }
+      &:nth-child(14) {
         .bar {
           width: 70%;
         }
